2003-04-07  James A Morrison <ja2morri@student.math.uwaterloo.ca>

	* doc/extend.texi (Darwin Pragmas): Fix spelling of Mac OS.

2003-04-05  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* c-decl.c (set_save_expr_context): Prototype.

2003-04-05  David Edelsohn  <edelsohn@gnu.org>

	* config/rs6000/rs6000.h (RTX_COSTS): Halve Power multiply costs.
	* config/rs6000/rs6000.md: Correct Power4 multiply latency.

2003-04-05  Zack Weinberg  <zack@codesourcery.com>

	PR optimization/10024
	* cfgrtl.c (force_nonfallthru_and_redirect): If e is the edge
	we want, use it.

2003-04-05  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>

	PR bootstrap/10267
	* doc/install.texi (*-*-solaris2): /bin/ksh is not just recommended
	for configuring.

2003-04-04  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* c-decl.c (set_save_expr_context): Use traditional-style function
	definition.

2003-04-04  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>

	* doc/contrib.texi (Contributors): Add entries for Wolfgang
	Bangerth, DJ Delorie, Christian Ehrhardt, Christopher Faylor,
	Nathanael Nerode, Diego Novillo, Hartmut Penner, Volker Reichelt,
	Danny Smith, and Ulrich Weigand.
	Update Kriang Lerdsuwanakij and fix a typo in Janis Johnson's
	entry.

2003-04-04  Zack Weinberg  <zack@codesourcery.com>

	PR bootstrap/10216
	* configure.in: Check whether it is necessary to link against
	libm to use ldexp.
	* configure: Regenerate.
	* Makefile.in: Add LDEXP_LIB substitution variable.

2003-04-03  Jason Merrill  <jason@redhat.com>

	PR c/10175
	* jump.c (never_reached_warning): Revert patch of 2002-11-02.
	Look backwards for a line note.

2003-04-02  Mike Stump  <mrs@apple.com>

	* doc/extend.texi (PowerPC AltiVec Built-in Functions): Split up
	some to avoid faulting makeinfo --html.

2003-04-02  Richard Henderson  <rth@redhat.com>

	* libgcc-std.ver (_Unwind_GetCFA): New.
	* unwind-dw2.c (_Unwind_GetCFA): New.
	* unwind-sjlj.c (_Unwind_GetCFA): New.
	* unwind.h: Declare it.

2003-04-02  Mike Stump  <mrs@apple.com>
