@@ -478,8 +478,6 @@ fixup_reorder_chain ()
 
 		  e_fake = unchecked_make_edge (bb, e_fall->dest, 0);
 
-		  if (!redirect_jump (bb->end, block_label (bb), 0))
-		    abort ();
 		  note = find_reg_note (bb->end, REG_BR_PROB, NULL_RTX);
 		  if (note)
 		    {
@@ -871,6 +869,13 @@ cfg_layout_redirect_edge (e, dest)
   src->next_bb = NULL;
   if (e->flags & EDGE_FALLTHRU)
     {
+      /* Redirect any branch edges unified with the fallthru one.  */
+      if (GET_CODE (src->end) == JUMP_INSN
+	  && JUMP_LABEL (src->end) == e->dest->head)
+	{
+          if (!redirect_jump (src->end, block_label (dest), 0))
+	    abort ();
+	}
       /* In case we are redirecting fallthru edge to the branch edge
          of conditional jump, remove it.  */
       if (src->succ->succ_next
