@@ -943,14 +943,13 @@ force_nonfallthru_and_redirect (e, target)
      by creating an basic block afterwards to redirect fallthru edge.  */
   if (e->src != ENTRY_BLOCK_PTR && e->dest != EXIT_BLOCK_PTR
       && any_condjump_p (e->src->end)
+      /* When called from cfglayout, fallthru edges do not
+         neccessarily go to the next block.  */
+      && e->src->next_bb == e->dest
       && JUMP_LABEL (e->src->end) == e->dest->head)
     {
       rtx note;
-      edge b;
-      if (e->dest == target)
-	b = e;
-      else
-	b = make_edge (e->src, target, 0);
+      edge b = make_edge (e->src, target, 0);
 
       if (!redirect_jump (e->src->end, block_label (target), 0))
 	abort ();
